--- a/.env.example
+++ b/.env.example
@@ -1,56 +1,162 @@
-# Aurelius Miner Configuration
-#
-# Copy this file to .env and update with your values:
-#   cp .env.example .env
+# ============================================================
+# AURELIUS SUBNET CONFIGURATION
+# ============================================================
+# Copy this file to .env and fill in your actual values
+# NEVER commit .env with real credentials to version control
 
-# ============================================================================
-# Wallet Configuration (REQUIRED)
-# ============================================================================
-# Your Bittensor wallet name and hotkey
-# Create with: btcli wallet new_coldkey --wallet.name miner
-#             btcli wallet new_hotkey --wallet.name miner --wallet.hotkey default
+# ============================================================
+# REQUIRED: OpenAI API Configuration
+# ============================================================
+# Get your API key from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=your-openai-api-key-here
+
+# ============================================================
+# Moderation Configuration
+# ============================================================
+# Threshold for content moderation (0.0 - 1.0)
+# Production recommended: 0.5-0.7
+# Higher = more permissive, Lower = more restrictive
+DANGER_THRESHOLD=0.5
+
+# ============================================================
+# Rate Limiting
+# ============================================================
+RATE_LIMIT_REQUESTS=100
+RATE_LIMIT_WINDOW_HOURS=1.0
+
+# ============================================================
+# Dataset Collection
+# ============================================================
+# Path for local dataset backup (use absolute paths in production)
+LOCAL_DATASET_PATH=./datasets
+ENABLE_LOCAL_BACKUP=true
+
+# Central API for data aggregation (aurelius-data-collector-api)
+# For local testing: http://localhost:3000/api/collections
+# For production: https://your-api-domain.com/api/collections
+CENTRAL_API_ENDPOINT=http://localhost:3000/api/collections
+# API key is optional - validator will auto-register on first submission
+# CENTRAL_API_KEY=your-central-api-key-here
+
+# ============================================================
+# Consensus Verification
+# ============================================================
+# Enable multi-validator consensus for data quality
+ENABLE_CONSENSUS=true
+
+# Number of validators to query for consensus
+CONSENSUS_VALIDATORS=5
+
+# Number of runs each validator performs
+CONSENSUS_RUNS_PER_VALIDATOR=3
+
+# Votes required to accept (recommend 80% = 4 out of 5)
+CONSENSUS_REQUIRED_VOTES=4
+
+# Timeout for consensus operations (seconds)
+CONSENSUS_TIMEOUT=60
+
+# Minimum stake required to participate in consensus (TAO)
+# Production recommended: 100.0+
+MIN_VALIDATOR_STAKE=100.0
+
+# ============================================================
+# Distribution Configuration
+# ============================================================
+# Minimum total runs across all validators per prompt
+MIN_TOTAL_RUNS_PER_PROMPT=15
+
+# Distribution mode: "all" (all prompts) or "dangerous_only"
+DISTRIBUTION_MODE=dangerous_only
+
+# ============================================================
+# Validator Trust/Reputation System
+# ============================================================
+ENABLE_VALIDATOR_TRUST_TRACKING=true
+MIN_VALIDATOR_TRUST_SCORE=0.7
+VALIDATOR_TRUST_DECAY_RATE=0.95
+
+# Path for trust persistence (use absolute paths in production)
+VALIDATOR_TRUST_PERSISTENCE_PATH=./validator_trust.json
+
+# Path for miner scores persistence (use absolute paths in production)
+MINER_SCORES_PATH=./miner_scores.json
+
+# ============================================================
+# Verification Thresholds
+# ============================================================
+MAX_SCORE_VARIANCE_THRESHOLD=0.05
+MIN_RESPONSE_TIME_SECONDS=2.0
+
+# ============================================================
+# Bittensor Network Configuration
+# ============================================================
+# Network: "local" (testing), "test" (testnet), "finney" (mainnet)
+BT_NETWORK=finney
+
+# Subnet UID (check with subnet owner)
+BT_NETUID=1
+
+# Validator port (ensure firewall allows this port)
+BT_PORT_VALIDATOR=8091
+
+# Subtensor endpoint (override BT_NETWORK if specified)
+# Mainnet: wss://entrypoint-finney.opentensor.ai:443
+# Testnet: wss://test.finney.opentensor.ai:443
+# Local: ws://127.0.0.1:9944
+# SUBTENSOR_ENDPOINT=wss://entrypoint-finney.opentensor.ai:443
+
+# ============================================================
+# Wallet Configuration
+# ============================================================
+# Validator wallet and hotkey names
+VALIDATOR_WALLET_NAME=validator
+VALIDATOR_HOTKEY=default
+
+# Miner wallet and hotkey names
 MINER_WALLET_NAME=miner
 MINER_HOTKEY=default
 
-# ============================================================================
-# Network Configuration
-# ============================================================================
-# Which Bittensor network to use:
-#   - finney: Mainnet (production)
-#   - test: Testnet
-#   - local: Local testing
-BT_NETWORK=finney
+# ============================================================
+# Network Configuration (for validators)
+# ============================================================
+# Auto-detect external IP (recommended for production)
+AUTO_DETECT_EXTERNAL_IP=true
 
-# Subnet UID (check current subnet ID for Aurelius)
-BT_NETUID=1
-
-# Port for validator communication (default: 8091)
-BT_PORT_VALIDATOR=8091
-
-# ============================================================================
-# Optional: Custom Subtensor Endpoint
-# ============================================================================
-# Override the default subtensor endpoint
-# SUBTENSOR_ENDPOINT=wss://entrypoint-finney.opentensor.ai:443
-
-# ============================================================================
-# Local Mode (for testing without blockchain registration)
-# ============================================================================
-# Set to true to bypass blockchain and connect directly to a validator IP
-# Useful for development/testing without wallet registration or stake
-LOCAL_MODE=false
-
-# If LOCAL_MODE=true, specify the validator's IP address
+# Manual external IP (used if auto-detect is false or fails)
+# Leave as 127.0.0.1 for local testing only
 VALIDATOR_HOST=127.0.0.1
 
-# ============================================================================
+# ============================================================
 # Logging Configuration
-# ============================================================================
-# Logging level: DEBUG, INFO, WARNING, ERROR
+# ============================================================
+# Log level: DEBUG, INFO, WARNING, ERROR
 LOG_LEVEL=INFO
 
-# Whether to log full prompts/responses (set to false for privacy)
+# Log sensitive data (prompts/responses) - false recommended for production
 LOG_SENSITIVE_DATA=false
 
-# Maximum length of logged prompts/responses (characters)
+# Maximum length of sensitive data in logs (characters)
 MAX_LOG_LENGTH=100
+
+# ============================================================
+# Error Handling Configuration
+# ============================================================
+# Moderation fail mode: "open" (accept on error) or "closed" (reject on error)
+# "closed" recommended for production security
+MODERATION_FAIL_MODE=closed
+
+# ============================================================
+# Development/Testing Flags
+# ============================================================
+# WARNING: These should be FALSE in production!
+
+# Local mode - Skip blockchain registration (for testing only)
+LOCAL_MODE=false
+
+# Skip weight setting (for testing only)
+SKIP_WEIGHT_SETTING=false
+
+# For local multi-validator testing, specify validator endpoints
+# Comma-separated list of validator URLs
+# LOCAL_VALIDATOR_ENDPOINTS=http://127.0.0.1:8091,http://127.0.0.1:8092
