--- a/.env.example
+++ b/.env.example
@@ -91,11 +91,11 @@ MIN_RESPONSE_TIME_SECONDS=2.0
 # ============================================================
 # Bittensor Network Configuration
 # ============================================================
-# Network: "local" (testing), "test" (testnet), "finney" (mainnet)
-BT_NETWORK=finney
+# Network: "local" (testing), "test" (testnet)
+BT_NETWORK=test
 
-# Subnet UID (check with subnet owner)
-BT_NETUID=1
+# Subnet UID - Aurelius Protocol testnet
+BT_NETUID=290
 
 # Validator port (ensure firewall allows this port)
 BT_PORT_VALIDATOR=8091
