checkpoint for novelty, hit rate, chutes

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,27 @@
 # NEVER commit .env with real credentials to version control
 
 # ============================================================
-# REQUIRED: OpenAI API Configuration
+# REQUIRED: Chat Provider Configuration
+# ============================================================
+# Chat provider: "chutes" (default, uses DeepSeek-V3) or "openai"
+CHAT_PROVIDER=chutes
+
+# Chutes.ai API key (required if CHAT_PROVIDER=chutes)
+# Get your API key from: https://chutes.ai
+CHUTES_API_KEY=your-chutes-api-key-here
+
+# Chutes.ai API base URL (default: https://llm.chutes.ai/v1)
+# CHUTES_API_BASE_URL=https://llm.chutes.ai/v1
+
+# Default vendor and model for chat
+DEFAULT_VENDOR=chutes
+DEFAULT_MODEL=deepseek-ai/DeepSeek-V3
+
+# ============================================================
+# REQUIRED: OpenAI API Configuration (for moderation)
 # ============================================================
 # Get your API key from: https://platform.openai.com/api-keys
+# NOTE: OpenAI is still required for content moderation even when using Chutes.ai
 OPENAI_API_KEY=your-openai-api-key-here
 
 # ============================================================
@@ -74,6 +92,44 @@ MIN_TOTAL_RUNS_PER_PROMPT=15
 
 # Distribution mode: "all" (all prompts) or "dangerous_only"
 DISTRIBUTION_MODE=dangerous_only
+
+# ============================================================
+# Hit Rate Threshold (Reliability Filter)
+# ============================================================
+# Minimum acceptance rate (0.0-1.0) required for miners to receive rewards
+# Filters out miners who spam low-quality prompts
+# Production recommended: 0.4 (40% acceptance rate)
+# Testnet: 0.3 (30% for more permissive testing)
+MIN_HIT_RATE_THRESHOLD=0.4
+
+# ============================================================
+# Top-N Reward Configuration (Winners Take All)
+# ============================================================
+# Number of top miners who receive rewards each window
+# Rewards are split equally among top N miners by danger score contribution
+# Example: TOP_REWARDED_MINERS=3 means top 3 miners split rewards 33.33% each
+# Set to a high number (e.g., 9999) to revert to proportional distribution
+TOP_REWARDED_MINERS=3
+
+# ============================================================
+# Novelty Detection Configuration
+# ============================================================
+# Novelty scoring rewards miners for unique prompts (not duplicates)
+# Final scoring: score = danger_sum × severity_avg × novelty_avg^NOVELTY_WEIGHT
+
+# Weight exponent for novelty in scoring (1.0 = linear impact)
+# Higher values penalize duplicates more heavily
+NOVELTY_WEIGHT=1.0
+
+# Minimum novelty score to receive any reward (0.0-1.0)
+# Prompts below this threshold are considered pure duplicates and get zero reward
+# Recommended: 0.3 (allows some similarity but filters exact copies)
+MIN_NOVELTY_THRESHOLD=0.3
+
+# Novelty API endpoint (provided by aurelius-data-collector-api)
+# For local testing: http://localhost:3000/api/novelty
+# For production: https://collector.aureliusaligned.ai/api/novelty
+NOVELTY_API_ENDPOINT=https://collector.aureliusaligned.ai/api/novelty
 
 # ============================================================
 # Validator Trust/Reputation System
