checkpoint for novelty, hit rate, chutes

--- a/.env.testnet
+++ b/.env.testnet
@@ -79,6 +79,12 @@ DISTRIBUTION_MODE=dangerous_only
 MIN_VALIDATOR_STAKE=0.0
 
 # ==============================================================================
+# 6.5. Hit Rate Threshold (Reliability Filter)
+# ==============================================================================
+# Minimum acceptance rate for miners to receive rewards (testnet: 30%)
+MIN_HIT_RATE_THRESHOLD=0.3
+
+# ==============================================================================
 # 7. Validator Trust System (Disabled for single validator)
 # ==============================================================================
 ENABLE_VALIDATOR_TRUST_TRACKING=false
