novelty and miner turning

--- a/.env.testnet
+++ b/.env.testnet
@@ -6,16 +6,24 @@
 # ==============================================================================
 
 # ==============================================================================
-# 1. OpenAI API Configuration (REQUIRED)
+# 1. Chat Provider Configuration (REQUIRED)
 # ==============================================================================
+# Chat provider: "chutes" (default) or "openai"
+CHAT_PROVIDER=chutes
+
+# Chutes.ai API (for chat completions with DeepSeek)
+CHUTES_API_KEY=cpk_1463e2bd5e2a43d49212090fe5b36fc8.2a77ecfdb3d55308b8ad307b5feb3512.jZNduy8avUVHzA4u8tl5s7I6MwfquJ5c
+CHUTES_API_BASE_URL=https://llm.chutes.ai/v1
+
+# OpenAI API (still used for moderation)
 OPENAI_API_KEY=YOUR_API_KEY_HERE
 OPENAI_MODEL=gpt-4o-mini
 OPENAI_MAX_TOKENS=1000
 
 # Multi-vendor model configuration
-ALLOWED_MODELS={"openai": ["gpt-4o", "gpt-4o-mini", "o4-mini", "o3-mini", "gpt-4-turbo", "gpt-3.5-turbo"]}
-DEFAULT_VENDOR=openai
-DEFAULT_MODEL=gpt-4o-mini
+ALLOWED_MODELS={"chutes": ["deepseek-ai/DeepSeek-V3", "deepseek-ai/DeepSeek-R1"], "openai": ["gpt-4o", "gpt-4o-mini", "o4-mini", "o3-mini"]}
+DEFAULT_VENDOR=chutes
+DEFAULT_MODEL=deepseek-ai/DeepSeek-V3
 
 # Model parameter constraints
 MIN_TEMPERATURE=0.0
@@ -55,8 +63,8 @@ RATE_LIMIT_WINDOW_HOURS=1.0
 LOCAL_DATASET_PATH=/var/lib/aurelius/datasets
 ENABLE_LOCAL_BACKUP=true
 
-# Central API (optional - set if you have a data collection API)
-CENTRAL_API_ENDPOINT=
+# Central API for data collection
+CENTRAL_API_ENDPOINT=https://collector.aureliusaligned.ai
 CENTRAL_API_KEY=
 
 # ==============================================================================
@@ -152,3 +160,21 @@ SKIP_WEIGHT_SETTING=false
 SIMULATED_BLOCK_START=10000
 SIMULATED_BLOCK_TIME=12.0
 FAST_BLOCK_MODE=false
+
+# ==============================================================================
+# 16. Top-N Reward Configuration (Winners Take All)
+# ==============================================================================
+# Number of top miners who receive rewards each window (equal split)
+TOP_REWARDED_MINERS=3
+
+# ==============================================================================
+# 17. Novelty Detection Configuration
+# ==============================================================================
+# Weight exponent for novelty in scoring (1.0 = linear impact)
+NOVELTY_WEIGHT=1.0
+
+# Minimum novelty score to receive any reward (0.0-1.0)
+MIN_NOVELTY_THRESHOLD=0.3
+
+# Novelty API endpoint (same base as central API)
+NOVELTY_API_ENDPOINT=https://collector.aureliusaligned.ai/api/novelty
