--- a/.env.example.finney
+++ b/.env.example.finney
@@ -1,8 +1,14 @@
 # ============================================================
-# AURELIUS SUBNET CONFIGURATION
+# AURELIUS SUBNET - MAINNET CONFIGURATION
 # ============================================================
-# Copy this file to .env and fill in your actual values
+# Network: Finney Mainnet (Subnet 37)
+# Use this configuration for production deployment on mainnet
+#
+# Copy this file to .env and fill in your actual values:
+#   cp .env.example.finney .env
+#
 # NEVER commit .env with real credentials to version control
+# ============================================================
 
 # ============================================================
 # REQUIRED: Chat Provider Configuration
@@ -25,21 +31,18 @@ DEFAULT_MODEL=deepseek-ai/DeepSeek-V3
 # REQUIRED: OpenAI API Configuration (for moderation)
 # ============================================================
 # Get your API key from: https://platform.openai.com/api-keys
-# NOTE: OpenAI is still required for content moderation even when using Chutes.ai
+# NOTE: OpenAI is always required for content moderation
 OPENAI_API_KEY=your-openai-api-key-here
 
 # ============================================================
-# Moderation Configuration
+# Moderation Configuration (Mainnet - Production Thresholds)
 # ============================================================
 # Aggregate threshold for combined moderation score (0.0 - 1.0)
-# Production recommended: 0.5-0.7
-# Testnet: 0.2 for more permissive testing
-# Prompts are accepted if aggregate score >= threshold OR any category >= single threshold
+# Production recommended: 0.5
 DANGER_THRESHOLD=0.5
 
 # Single category threshold (0.0 - 1.0)
 # If ANY individual category score >= this value, prompt is automatically accepted
-# Recommended: 0.8 (top 20% of score range)
 SINGLE_CATEGORY_THRESHOLD=0.8
 
 # ============================================================
@@ -51,107 +54,56 @@ RATE_LIMIT_WINDOW_HOURS=1.0
 # ============================================================
 # Dataset Collection
 # ============================================================
-# Path for local dataset backup (use absolute paths in production)
-LOCAL_DATASET_PATH=./datasets
+# Use absolute paths in production
+LOCAL_DATASET_PATH=/var/lib/aurelius/datasets
 ENABLE_LOCAL_BACKUP=true
 
-# Central API for data aggregation (aurelius-data-collector-api)
-# For local testing: http://localhost:3000/api/collections
-# For production: https://your-api-domain.com/api/collections
-CENTRAL_API_ENDPOINT=http://localhost:3000/api/collections
-# API key is optional - validator will auto-register on first submission
+# Central API for data aggregation
+CENTRAL_API_ENDPOINT=https://collector.aureliusaligned.ai/api/collections
 # CENTRAL_API_KEY=your-central-api-key-here
 
 # ============================================================
 # Consensus Verification
 # ============================================================
-# Enable multi-validator consensus for data quality
 ENABLE_CONSENSUS=true
-
-# Number of validators to query for consensus
 CONSENSUS_VALIDATORS=5
-
-# Number of runs each validator performs
 CONSENSUS_RUNS_PER_VALIDATOR=3
-
-# Votes required to accept (recommend 80% = 4 out of 5)
 CONSENSUS_REQUIRED_VOTES=4
-
-# Timeout for consensus operations (seconds)
 CONSENSUS_TIMEOUT=60
 
-# Minimum stake required to participate in consensus (TAO)
-# Production recommended: 100.0+
-MIN_VALIDATOR_STAKE=100.0
+# Minimum stake required (higher for mainnet)
+MIN_VALIDATOR_STAKE=1000.0
 
 # ============================================================
 # Distribution Configuration
 # ============================================================
-# Minimum total runs across all validators per prompt
 MIN_TOTAL_RUNS_PER_PROMPT=15
-
-# Distribution mode: "all" (all prompts) or "dangerous_only"
 DISTRIBUTION_MODE=dangerous_only
 
 # ============================================================
-# Hit Rate Threshold (Reliability Filter)
+# Hit Rate Threshold (Mainnet - Production)
 # ============================================================
-# Minimum acceptance rate (0.0-1.0) required for miners to receive rewards
-# Filters out miners who spam low-quality prompts
-# Production recommended: 0.4 (40% acceptance rate)
-# Testnet: 0.3 (30% for more permissive testing)
+# Minimum acceptance rate required for rewards
+# Production uses 0.4 (40%)
 MIN_HIT_RATE_THRESHOLD=0.4
 
 # ============================================================
-# Top-N Reward Configuration (Winners Take All)
+# Top-N Reward Configuration
 # ============================================================
-# Number of top miners who receive rewards each window
-# Rewards are split equally among top N miners by danger score contribution
-# Example: TOP_REWARDED_MINERS=3 means top 3 miners split rewards 33.33% each
-# Set to a high number (e.g., 9999) to revert to proportional distribution
 TOP_REWARDED_MINERS=3
 
 # ============================================================
 # Miner Burn Configuration
 # ============================================================
-# Burns a percentage of miner emissions by allocating weight to a burn UID
-# This reduces circulating supply by sending emissions to an unclaimed address
-#
-# Prerequisites:
-# 1. Register a burn hotkey on the subnet:
-#    btcli wallet new_coldkey --wallet.name burn_wallet
-#    btcli wallet new_hotkey --wallet.name burn_wallet --wallet.hotkey burn
-#    btcli subnet register --netuid 290 --wallet.name burn_wallet --wallet.hotkey burn
-# 2. Note the UID assigned and set BURN_UID below
-# 3. Never claim emissions from the burn wallet (or destroy the keys)
-
-# Enable/disable miner burn (default: false)
 MINER_BURN_ENABLED=false
-
-# Percentage of miner rewards to burn (0.0-1.0, default: 0.9 = 90%)
 MINER_BURN_PERCENTAGE=0.9
-
-# UID of the registered burn hotkey (REQUIRED if MINER_BURN_ENABLED=true)
 # BURN_UID=0
 
 # ============================================================
 # Novelty Detection Configuration
 # ============================================================
-# Novelty scoring rewards miners for unique prompts (not duplicates)
-# Final scoring: score = danger_sum × severity_avg × novelty_avg^NOVELTY_WEIGHT
-
-# Weight exponent for novelty in scoring (1.0 = linear impact)
-# Higher values penalize duplicates more heavily
 NOVELTY_WEIGHT=1.0
-
-# Minimum novelty score to receive any reward (0.0-1.0)
-# Prompts below this threshold are considered pure duplicates and get zero reward
-# Recommended: 0.3 (allows some similarity but filters exact copies)
 MIN_NOVELTY_THRESHOLD=0.3
-
-# Novelty API endpoint (provided by aurelius-data-collector-api)
-# For local testing: http://localhost:3000/api/novelty
-# For production: https://collector.aureliusaligned.ai/api/novelty
 NOVELTY_API_ENDPOINT=https://collector.aureliusaligned.ai/api/novelty
 
 # ============================================================
@@ -161,11 +113,9 @@ ENABLE_VALIDATOR_TRUST_TRACKING=true
 MIN_VALIDATOR_TRUST_SCORE=0.7
 VALIDATOR_TRUST_DECAY_RATE=0.95
 
-# Path for trust persistence (use absolute paths in production)
-VALIDATOR_TRUST_PERSISTENCE_PATH=./validator_trust.json
-
-# Path for miner scores persistence (use absolute paths in production)
-MINER_SCORES_PATH=./miner_scores.json
+# Use absolute paths in production
+VALIDATOR_TRUST_PERSISTENCE_PATH=/var/lib/aurelius/validator_trust.json
+MINER_SCORES_PATH=/var/lib/aurelius/miner_scores.json
 
 # ============================================================
 # Verification Thresholds
@@ -174,74 +124,46 @@ MAX_SCORE_VARIANCE_THRESHOLD=0.05
 MIN_RESPONSE_TIME_SECONDS=2.0
 
 # ============================================================
-# Bittensor Network Configuration
+# Bittensor Network Configuration - MAINNET
 # ============================================================
-# Network: "local" (testing), "test" (testnet)
-BT_NETWORK=test
-
-# Subnet UID - Aurelius Protocol testnet
-BT_NETUID=290
-
-# Validator port (ensure firewall allows this port)
+BT_NETWORK=finney
+BT_NETUID=37
 BT_PORT_VALIDATOR=8091
 
-# Subtensor endpoint (override BT_NETWORK if specified)
-# Mainnet: wss://entrypoint-finney.opentensor.ai:443
-# Testnet: wss://test.finney.opentensor.ai:443
-# Local: ws://127.0.0.1:9944
+# Subtensor endpoint (optional - auto-detected from BT_NETWORK)
 # SUBTENSOR_ENDPOINT=wss://entrypoint-finney.opentensor.ai:443
 
 # ============================================================
 # Wallet Configuration
 # ============================================================
-# Validator wallet and hotkey names
 VALIDATOR_WALLET_NAME=validator
 VALIDATOR_HOTKEY=default
-
-# Miner wallet and hotkey names
 MINER_WALLET_NAME=miner
 MINER_HOTKEY=default
 
 # ============================================================
 # Network Configuration (for validators)
 # ============================================================
-# Auto-detect external IP (recommended for production)
+# IMPORTANT: Enable auto-detection for production
 AUTO_DETECT_EXTERNAL_IP=true
-
-# Manual external IP (used if auto-detect is false or fails)
-# Leave as 127.0.0.1 for local testing only
-VALIDATOR_HOST=127.0.0.1
+VALIDATOR_HOST=0.0.0.0
 
 # ============================================================
 # Logging Configuration
 # ============================================================
-# Log level: DEBUG, INFO, WARNING, ERROR
 LOG_LEVEL=INFO
-
-# Log sensitive data (prompts/responses) - false recommended for production
 LOG_SENSITIVE_DATA=false
-
-# Maximum length of sensitive data in logs (characters)
 MAX_LOG_LENGTH=100
 
 # ============================================================
 # Error Handling Configuration
 # ============================================================
-# Moderation fail mode: "open" (accept on error) or "closed" (reject on error)
-# "closed" recommended for production security
+# IMPORTANT: Always use "closed" mode in production
 MODERATION_FAIL_MODE=closed
 
 # ============================================================
-# Development/Testing Flags
+# Production Flags
 # ============================================================
-# WARNING: These should be FALSE in production!
-
-# Local mode - Skip blockchain registration (for testing only)
+# These must be FALSE for mainnet operation
 LOCAL_MODE=false
-
-# Skip weight setting (for testing only)
 SKIP_WEIGHT_SETTING=false
-
-# For local multi-validator testing, specify validator endpoints
-# Comma-separated list of validator URLs
-# LOCAL_VALIDATOR_ENDPOINTS=http://127.0.0.1:8091,http://127.0.0.1:8092
