minor updates to defaults

--- a/.env.example.finney
+++ b/.env.example.finney
@@ -34,6 +34,9 @@ DEFAULT_MODEL=deepseek-ai/DeepSeek-V3
 # NOTE: OpenAI is always required for content moderation
 OPENAI_API_KEY=your-openai-api-key-here
 
+# Maximum tokens for LLM responses (affects response length)
+OPENAI_MAX_TOKENS=2048
+
 # ============================================================
 # Moderation Configuration (Mainnet - Production Thresholds)
 # ============================================================
@@ -100,10 +103,10 @@ MINER_BURN_PERCENTAGE=0.9
 # BURN_UID=0
 
 # ============================================================
-# Novelty Detection Configuration
+# Novelty Detection Configuration (Mainnet - Stricter)
 # ============================================================
 NOVELTY_WEIGHT=1.0
-MIN_NOVELTY_THRESHOLD=0.3
+MIN_NOVELTY_THRESHOLD=0.7
 NOVELTY_API_ENDPOINT=https://collector.aureliusaligned.ai/api/novelty
 
 # ============================================================
