--- a/.env.example.test
+++ b/.env.example.test
@@ -34,6 +34,9 @@ DEFAULT_MODEL=deepseek-ai/DeepSeek-V3
 # NOTE: OpenAI is always required for content moderation
 OPENAI_API_KEY=your-openai-api-key-here
 
+# Maximum tokens for LLM responses (affects response length)
+OPENAI_MAX_TOKENS=2048
+
 # ============================================================
 # Moderation Configuration (Testnet - More Permissive)
 # ============================================================
