--- a/.env.example.finney
+++ b/.env.example.finney
@@ -100,7 +100,7 @@ TOP_REWARDED_MINERS=3
 # ============================================================
 MINER_BURN_ENABLED=false
 MINER_BURN_PERCENTAGE=0.9
-# BURN_UID=0
+BURN_UID=200
 
 # ============================================================
 # Novelty Detection Configuration (Mainnet - Stricter)
