--- a/.env.example.finney
+++ b/.env.example.finney
@@ -1,14 +1,32 @@
 # ============================================================
-# AURELIUS SUBNET - MAINNET CONFIGURATION
+# AURELIUS SUBNET - MAINNET CONFIGURATION (Full Options)
 # ============================================================
 # Network: Finney Mainnet (Subnet 37)
-# Use this configuration for production deployment on mainnet
+#
+# NOTE: Most settings are now AUTO-DETECTED!
+# - Wallet: Auto-detected if you have exactly one
+# - Thresholds: Auto-set based on BT_NETUID (37 = mainnet defaults)
+#
+# IMPORTANT: To override auto-set thresholds, you must set ADVANCED_MODE=true
+#
+# For a minimal config, see .env.example instead.
+# This file shows ALL available options for advanced users.
 #
 # Copy this file to .env and fill in your actual values:
 #   cp .env.example.finney .env
 #
 # NEVER commit .env with real credentials to version control
 # ============================================================
+
+# ============================================================
+# ADVANCED MODE (required to override network defaults)
+# ============================================================
+# By default, thresholds and parameters are auto-set based on BT_NETUID.
+# Set ADVANCED_MODE=true to use custom values for:
+#   DANGER_THRESHOLD, MIN_HIT_RATE_THRESHOLD, MIN_VALIDATOR_STAKE, etc.
+#
+# WARNING: Only enable if you understand the implications!
+# ADVANCED_MODE=true
 
 # ============================================================
 # REQUIRED: Chat Provider Configuration
@@ -38,11 +56,14 @@ OPENAI_API_KEY=your-openai-api-key-here
 OPENAI_MAX_TOKENS=2048
 
 # ============================================================
-# Moderation Configuration (Mainnet - Production Thresholds)
+# Moderation Configuration (Auto-Set for Mainnet)
 # ============================================================
+# These thresholds are AUTO-SET based on BT_NETUID=37 (mainnet).
+# Uncomment only if you need to override the network defaults.
+#
 # Aggregate threshold for combined moderation score (0.0 - 1.0)
-# Production recommended: 0.5
-DANGER_THRESHOLD=0.5
+# Mainnet default: 0.5
+# DANGER_THRESHOLD=0.5
 
 # Single category threshold (0.0 - 1.0)
 # If ANY individual category score >= this value, prompt is automatically accepted
@@ -74,8 +95,8 @@ CONSENSUS_RUNS_PER_VALIDATOR=3
 CONSENSUS_REQUIRED_VOTES=4
 CONSENSUS_TIMEOUT=60
 
-# Minimum stake required (higher for mainnet)
-MIN_VALIDATOR_STAKE=1000.0
+# Minimum stake required (AUTO-SET: mainnet=1000, testnet=100)
+# MIN_VALIDATOR_STAKE=1000.0
 
 # ============================================================
 # Distribution Configuration
@@ -84,11 +105,11 @@ MIN_TOTAL_RUNS_PER_PROMPT=15
 DISTRIBUTION_MODE=dangerous_only
 
 # ============================================================
-# Hit Rate Threshold (Mainnet - Production)
+# Hit Rate Threshold (AUTO-SET for Mainnet)
 # ============================================================
 # Minimum acceptance rate required for rewards
-# Production uses 0.4 (40%)
-MIN_HIT_RATE_THRESHOLD=0.4
+# AUTO-SET: mainnet=0.4, testnet=0.3
+# MIN_HIT_RATE_THRESHOLD=0.4
 
 # ============================================================
 # Top-N Reward Configuration
@@ -103,10 +124,11 @@ MINER_BURN_PERCENTAGE=0.9
 BURN_UID=200
 
 # ============================================================
-# Novelty Detection Configuration (Mainnet - Stricter)
+# Novelty Detection Configuration (AUTO-SET for Mainnet)
 # ============================================================
 NOVELTY_WEIGHT=1.0
-MIN_NOVELTY_THRESHOLD=0.7
+# AUTO-SET: mainnet=0.7, testnet=0.3
+# MIN_NOVELTY_THRESHOLD=0.7
 NOVELTY_API_ENDPOINT=https://collector.aureliusaligned.ai/api/novelty
 
 # ============================================================
@@ -137,12 +159,14 @@ BT_PORT_VALIDATOR=8091
 # SUBTENSOR_ENDPOINT=wss://entrypoint-finney.opentensor.ai:443
 
 # ============================================================
-# Wallet Configuration
+# Wallet Configuration (OPTIONAL - Usually Auto-Detected)
 # ============================================================
-VALIDATOR_WALLET_NAME=validator
-VALIDATOR_HOTKEY=default
-MINER_WALLET_NAME=miner
-MINER_HOTKEY=default
+# If you have exactly one wallet with one hotkey, it's auto-detected.
+# Only set these if you have multiple wallets or want to override:
+# VALIDATOR_WALLET_NAME=validator
+# VALIDATOR_HOTKEY=default
+# MINER_WALLET_NAME=miner
+# MINER_HOTKEY=default
 
 # ============================================================
 # Network Configuration (for validators)
