--- a/.env.example.test
+++ b/.env.example.test
@@ -82,7 +82,7 @@ LOCAL_DATASET_PATH=./datasets
 ENABLE_LOCAL_BACKUP=true
 
 # Central API for data aggregation
-CENTRAL_API_ENDPOINT=http://localhost:3000/api/collections
+CENTRAL_API_ENDPOINT=https://aurelius-data-collector-api-staging.up.railway.app/api/collections
 # CENTRAL_API_KEY=your-central-api-key-here
 
 # ============================================================
@@ -128,7 +128,7 @@ BURN_UID=200
 NOVELTY_WEIGHT=1.0
 # AUTO-SET: mainnet=0.7, testnet=0.3
 # MIN_NOVELTY_THRESHOLD=0.3
-NOVELTY_API_ENDPOINT=https://collector.aureliusaligned.ai/api/novelty
+NOVELTY_API_ENDPOINT=https://aurelius-data-collector-api-staging.up.railway.app/api/novelty
 
 # ============================================================
 # Validator Trust/Reputation System
