checkpoint for config improvements

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@
 # 1. API keys (required)
 # 2. Network (test or finney)
 #
-# For all options, see: .env.example.test or .env.example.finney
+# For advanced options, see: aurelius/shared/config.py
 # ============================================================
 
 # ============================================================
@@ -23,8 +23,9 @@ OPENAI_API_KEY=your-openai-api-key-here
 # ============================================================
 # NETWORK SELECTION (choose one)
 # ============================================================
-# Default: test (testnet subnet 290)
-# Options: test, finney
+# BT_NETUID is auto-detected from BT_NETWORK:
+#   test   -> subnet 290 (testnet)
+#   finney -> subnet 37  (mainnet)
 BT_NETWORK=test
 
 # ============================================================
