--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,17 @@ BT_NETWORK=test
 # Only set these if you have multiple wallets:
 # VALIDATOR_WALLET_NAME=validator
 # VALIDATOR_HOTKEY=default
+
+# ============================================================
+# OPTIONAL: Axon External IP
+# ============================================================
+# Set the external IP address for your validator's axon.
+# This is the IP that other validators will use to reach you for consensus.
+#
+# Priority: BT_AXON_EXTERNAL_IP > AUTO_DETECT_EXTERNAL_IP > VALIDATOR_HOST
+#
+# Option 1: Bittensor standard env var (recommended)
+# BT_AXON_EXTERNAL_IP=your.external.ip.here
+#
+# Option 2: Auto-detect (used by Docker deployments)
+# AUTO_DETECT_EXTERNAL_IP=true
