--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,14 @@ OPENAI_API_KEY=your-openai-api-key-here
 BT_NETWORK=test
 
 # ============================================================
+# OPTIONAL: DeepSeek Direct API (fallback when Chutes fails)
+# ============================================================
+# When Chutes.ai returns 502/503/504 for DeepSeek models,
+# this provides a direct fallback to DeepSeek's own API.
+# Get your key from: https://platform.deepseek.com
+# DEEPSEEK_API_KEY=your-deepseek-api-key-here
+
+# ============================================================
 # OPTIONAL: Wallet (usually auto-detected)
 # ============================================================
 # Only set these if you have multiple wallets:
